Changelog
=========

2.3.9 (unreleased)
------------------

- Nothing changed yet.


2.3.8 (2013-09-16)
------------------

- Fix 'table of contents' for Dexterity types.
  [pabo, pbauer, timo]

- Use safe_unicode to decode the title of the object when retrieving the
  rss links from the RSSViewlet
  [ichim-david]


2.3.7 (2013-08-14)
------------------

- Don't try to getId() for the template-name body when there is no
  template. Corrects an issue with the Dexterity schema editor.
  [esteele]


2.3.6 (2013-08-13)
------------------

- Fix conflict with <body> class attribute improvement in TinyMCE.
  [rpatterson]

- Implement a canonical link relation viewlet to be displayed by
  IHtmlHeadLinks viewlet manager; this will prevent web indexers from indexing
  the same object more than once, improving also the way these indexers deal
  with images and files.
  [hvelarde]

- Add Dexterity support for the related items viewlet.
  [pabo]

- Personal bar viewlet home link simply links to the user actions list.
  [danjacka]


2.3.5 (2013-05-23)
------------------

- Fixed AttributeError for FilesystemResourceDirectory
  See https://dev.plone.org/ticket/13506
  [kroman0]

- Check appropriate permission for 'Revert to this revision' button.
  [danjacka]


2.3.4 (2013-03-05)
------------------

- handle missing feed type so it doesn't throw an error
  [vangheem]

- handle absense of ACTUAL_URL on request.
  Fixes https://dev.plone.org/ticket/13173
  [vangheem]

- Also show history on the folder contents view
  [vangheem]


2.3.3 (2013-01-01)
------------------

- Changed the behaviour of the title viewlet for items in the portal_factory.
  See https://dev.plone.org/ticket/12117
  [alert]

- Fix an edge case where getNavigationRootObject could loop infinitely.
  [davisagli]

- Add 'subsection' prefix to the all sections below to avoid classnames
  that start with digits, which is not permitted by the CSS standard.
  [erral]
